@@ -1,12 +1,5 @@
 package com.revature.revworkforce.serviceImpl;
 
-import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.Mockito.*;
-
-import java.time.LocalDateTime;
-import java.util.List;
-import java.util.Optional;
-
 import com.revature.revworkforce.dto.AuditLogDTO;
 import com.revature.revworkforce.enums.AuditAction;
 import com.revature.revworkforce.model.AuditLog;
@@ -19,9 +12,19 @@ import com.revature.revworkforce.util.Constants;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+
+import java.time.LocalDateTime;
+import java.util.Arrays;
+import java.util.List;
+import java.util.Optional;
+
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
 class AuditServiceImplTest {
@@ -39,29 +42,23 @@ class AuditServiceImplTest {
     private AuditLog auditLog;
 
     @BeforeEach
-    void setup() {
+    void setUp() {
 
         employee = new Employee();
         employee.setEmployeeId("EMP001");
-        employee.setFirstName("Aishwarya");
+        employee.setFirstName("John");
+        employee.setLastName("Doe");
 
         auditLog = new AuditLog();
         auditLog.setAuditId(1L);
         auditLog.setEmployee(employee);
-        auditLog.setAction("INSERT");
-        auditLog.setTableName("EMPLOYEES");
-        auditLog.setRecordId("EMP001");
-        auditLog.setOldValue(null);
-        auditLog.setNewValue("Created employee");
+        auditLog.setAction("TEST_ACTION");
+        auditLog.setTableName("TEST_TABLE");
         auditLog.setCreatedAt(LocalDateTime.now());
     }
 
-    // =====================================================
-    // CREATE AUDIT LOG
-    // =====================================================
-
     @Test
-    void createAuditLog_Success() {
+    void createAuditLog_WithEmployee() {
 
         when(employeeRepository.findById("EMP001"))
                 .thenReturn(Optional.of(employee));
@@ -70,206 +67,209 @@ class AuditServiceImplTest {
                 .thenReturn(auditLog);
 
         AuditLog result = auditService.createAuditLog(
-                "EMP001",
-                "INSERT",
-                "EMPLOYEES",
-                "EMP001",
-                null,
-                "Created employee",
-                null,
-                null);
+                "EMP001","ACTION","TABLE","1","OLD","NEW","IP","UA");
 
-        assertNotNull(result);
+        assertThat(result).isNotNull();
         verify(auditLogRepository).save(any(AuditLog.class));
     }
 
-    // =====================================================
-    // EMPLOYEE LOGS
-    // =====================================================
+    @Test
+    void createAuditLog_System() {
+
+        when(auditLogRepository.save(any(AuditLog.class)))
+                .thenReturn(auditLog);
+
+        AuditLog result = auditService.createAuditLog(
+                "SYSTEM","ACTION","TABLE","1","OLD","NEW","IP","UA");
+
+        assertThat(result).isNotNull();
+        verify(employeeRepository, never()).findById(anyString());
+    }
 
     @Test
     void logEmployeeCreation_Success() {
 
-        when(auditLogRepository.save(any())).thenReturn(auditLog);
+        when(employeeRepository.findById("EMP001"))
+                .thenReturn(Optional.of(employee));
+
+        when(auditLogRepository.save(any(AuditLog.class)))
+                .thenReturn(auditLog);
 
         auditService.logEmployeeCreation("EMP001", employee);
 
-        verify(auditLogRepository).save(any());
+        verify(auditLogRepository).save(any(AuditLog.class));
     }
 
     @Test
     void logEmployeeUpdate_Success() {
 
-        when(auditLogRepository.save(any())).thenReturn(auditLog);
+        when(employeeRepository.findById("EMP001"))
+                .thenReturn(Optional.of(employee));
 
-        auditService.logEmployeeUpdate("EMP001", "EMP001", "Updated employee");
+        when(auditLogRepository.save(any(AuditLog.class)))
+                .thenReturn(auditLog);
 
-        verify(auditLogRepository).save(any());
+        auditService.logEmployeeUpdate("EMP001", "EMP002", "Changes");
+
+        verify(auditLogRepository).save(any(AuditLog.class));
     }
-
-    // =====================================================
-    // LOGIN / LOGOUT
-    // =====================================================
 
     @Test
     void logLogin_Success() {
 
-        when(auditLogRepository.save(any())).thenReturn(auditLog);
+        when(employeeRepository.findById("EMP001"))
+                .thenReturn(Optional.of(employee));
 
-        auditService.logLogin("EMP001", "127.0.0.1", "Chrome");
+        when(auditLogRepository.save(any(AuditLog.class)))
+                .thenReturn(auditLog);
 
-        verify(auditLogRepository).save(any());
+        auditService.logLogin("EMP001","IP","UA");
+
+        verify(auditLogRepository).save(any(AuditLog.class));
     }
 
     @Test
     void logLogout_Success() {
 
-        when(auditLogRepository.save(any())).thenReturn(auditLog);
+        when(employeeRepository.findById("EMP001"))
+                .thenReturn(Optional.of(employee));
 
-        auditService.logLogout("EMP001", "127.0.0.1");
+        when(auditLogRepository.save(any(AuditLog.class)))
+                .thenReturn(auditLog);
 
-        verify(auditLogRepository).save(any());
+        auditService.logLogout("EMP001","IP");
+
+        verify(auditLogRepository).save(any(AuditLog.class));
     }
-    @Test
-    void convertToDTO_Success() {
-
-        AuditLogDTO dto = auditService.convertToDTO(auditLog);
-
-        assertNotNull(dto);
-        assertEquals(auditLog.getAuditId(), dto.getAuditId());
-        assertEquals(employee.getEmployeeId(), dto.getPerformedBy());
-        assertEquals(employee.getFullName(), dto.getPerformedByName());
-        assertEquals(auditLog.getAction(), dto.getAction());
-    }
-    // =====================================================
-    // LEAVE LOGS
-    // =====================================================
 
     @Test
     void logLeaveApproval_Success() {
 
-        when(auditLogRepository.save(any())).thenReturn(auditLog);
+        when(employeeRepository.findById("EMP001"))
+                .thenReturn(Optional.of(employee));
 
-        auditService.logLeaveApproval("EMP001", 10L);
+        when(auditLogRepository.save(any(AuditLog.class)))
+                .thenReturn(auditLog);
 
-        verify(auditLogRepository).save(any());
+        auditService.logLeaveApproval("EMP001",1L);
+
+        verify(auditLogRepository).save(any(AuditLog.class));
     }
 
     @Test
     void logLeaveRejection_Success() {
 
-        when(auditLogRepository.save(any())).thenReturn(auditLog);
+        when(employeeRepository.findById("EMP001"))
+                .thenReturn(Optional.of(employee));
 
-        auditService.logLeaveRejection("EMP001", 10L);
+        when(auditLogRepository.save(any(AuditLog.class)))
+                .thenReturn(auditLog);
 
-        verify(auditLogRepository).save(any());
+        auditService.logLeaveRejection("EMP001",1L);
+
+        verify(auditLogRepository).save(any(AuditLog.class));
     }
-
-    // =====================================================
-    // FETCH METHODS
-    // =====================================================
 
     @Test
     void getAllAuditLogs_Success() {
 
-        when(auditLogRepository.findAll()).thenReturn(List.of(auditLog));
+        when(auditLogRepository.findAll())
+                .thenReturn(Arrays.asList(auditLog));
 
         List<AuditLog> result = auditService.getAllAuditLogs();
 
-        assertEquals(1, result.size());
+        assertThat(result).hasSize(1);
     }
 
     @Test
     void getRecentAuditLogs_Success() {
 
-        when(auditLogRepository.findRecentLogs(5)).thenReturn(List.of(auditLog));
+        when(auditLogRepository.findRecentLogs(10))
+                .thenReturn(Arrays.asList(auditLog));
 
-        List<AuditLog> result = auditService.getRecentAuditLogs(5);
+        List<AuditLog> result = auditService.getRecentAuditLogs(10);
 
-        assertEquals(1, result.size());
+        assertThat(result).hasSize(1);
     }
 
     @Test
     void getLoginActivities_Success() {
 
         when(auditLogRepository.findByAction(Constants.AUDIT_LOGIN))
-                .thenReturn(List.of(auditLog));
+                .thenReturn(Arrays.asList(auditLog));
 
         List<AuditLog> result = auditService.getLoginActivities();
 
-        assertEquals(1, result.size());
+        assertThat(result).hasSize(1);
     }
-
-    // =====================================================
-    // DTO CONVERSION
-    // =====================================================
-
-   
 
     @Test
     void getLoginActivitiesAsDTO_Success() {
 
         when(auditLogRepository.findByAction(Constants.AUDIT_LOGIN))
-                .thenReturn(List.of(auditLog));
+                .thenReturn(Arrays.asList(auditLog));
 
         List<AuditLogDTO> result = auditService.getLoginActivitiesAsDTO();
 
-        assertEquals(1, result.size());
+        assertThat(result).hasSize(1);
     }
-
-    // =====================================================
-    // CLEAN OLD LOGS
-    // =====================================================
 
     @Test
     void cleanOldAuditLogs_Success() {
 
-        when(auditLogRepository.deleteOldLogs(any())).thenReturn(2);
+        when(auditLogRepository.deleteOldLogs(any()))
+                .thenReturn(5);
 
         auditService.cleanOldAuditLogs();
 
         verify(auditLogRepository).deleteOldLogs(any());
     }
 
-    // =====================================================
-    // CSV EXPORT
-    // =====================================================
+    @Test
+    void logAction_Success() {
+
+        when(employeeRepository.findById("EMP001"))
+                .thenReturn(Optional.of(employee));
+
+        when(auditLogRepository.save(any(AuditLog.class)))
+                .thenReturn(auditLog);
+
+        auditService.logAction(
+                "EMP001",
+                AuditAction.UPDATE,
+                "ENTITY",
+                "1",
+                "Details",
+                "IP");
+
+        verify(auditLogRepository).save(any(AuditLog.class));
+    }
+
+    @Test
+    void searchAuditLogs_Success() {
+
+        when(auditLogRepository.searchLogs(any(), any(), any(), any()))
+                .thenReturn(Arrays.asList(auditLog));
+
+        List<AuditLogDTO> result =
+                auditService.searchAuditLogs("All Modules", null, null, "keyword");
+
+        assertThat(result).hasSize(1);
+    }
 
     @Test
     void exportAuditLogsToCSV_Success() {
 
         AuditLogDTO dto = new AuditLogDTO();
         dto.setAuditId(1L);
-        dto.setPerformedBy("EMP001");
-        dto.setAction("INSERT");
-        dto.setTableName("EMPLOYEES");
-        dto.setNewValue("Created employee");
         dto.setPerformedAt(LocalDateTime.now());
+        dto.setPerformedBy("EMP001");
+        dto.setAction("ACTION");
+        dto.setTableName("TABLE");
+        dto.setNewValue("NEW");
 
-        byte[] result = auditService.exportAuditLogsToCSV(List.of(dto));
+        byte[] result = auditService.exportAuditLogsToCSV(Arrays.asList(dto));
 
-        assertNotNull(result);
-        assertTrue(new String(result).contains("EMP001"));
+        assertThat(result).isNotEmpty();
     }
-
-    // =====================================================
-    // GENERIC ACTION LOG
-    // =====================================================
-
-    @Test
-    void logAction_Success() {
-
-        when(auditLogRepository.save(any())).thenReturn(auditLog);
-
-        auditService.logAction(
-                "EMP001",
-                AuditAction.INSERT,
-                "GOALS",
-                "1",
-                "Goal created",
-                "127.0.0.1");
-
-        verify(auditLogRepository).save(any());
-    }
-
 }
